--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "postcss-px-to-viewport",
+  "name": "@quellingblade/postcss-px-to-viewport",
   "description": "A CSS post-processor that converts px to viewport units (vw, vh, vmin, vmax).",
-  "version": "0.0.3",
-  "author": "Dmitry Karpunin <koderfunk@gmail.com>",
+  "version": "0.0.4",
+  "author": "quellingblade",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git@github.com:evrone/postcss-px-to-viewport.git"
+    "url": "git@github.com:quellingblade/postcss-px-to-viewport.git"
   },
-  "bugs": "https://github.com/evrone/postcss-px-to-viewport/issues",
-  "homepage": "https://github.com/evrone/postcss-px-to-viewport",
+  "homepage": "https://github.com/QuellingBlade/postcss-px-to-viewport",
   "main": "index.js",
   "keywords": [
     "css",
